fix(modal): fix modal z-index when modal-value set always as true

--- a/packages/ui/src/components/va-modal/_variables.scss
+++ b/packages/ui/src/components/va-modal/_variables.scss
@@ -31,12 +31,6 @@
   --va-modal-dialog-box-shadow: 0 4px 70px -18px var(--va-shadow);
 
   /* Fullscreen */
-  --va-modal-overlay-position: fixed;
-  --va-modal-overlay-top: 0;
-  --va-modal-overlay-left: 0;
-  --va-modal-overlay-z-index: calc(var(--va-modal-container-z-index) - 1);
-  --va-modal-overlay-width: 100vw;
-  --va-modal-overlay-height: 100vh;
   --va-modal-overlay-opacity-transition: opacity calc(2 * var(--va-modal-basic-duration) / 3) cubic-bezier(1, 0.5, 0.8, 1);
   --va-modal-overlay-color: rgb(0, 0, 0);
   --va-modal-overlay-opacity: 0.6;
